# SETR_Trab1

./: CMakeLists.txt  README.md  main  main.c  myDLL.c  myDLL.h
build_new/: CMakeCache.txt
doc/: Doxyfile  Doxyfile.bak  README.md
doc/html/: annotated.html  bug.html  classes.html  dir_000001_000000.html  dir_000002_000000.html  dir_000003_000000.html  dir_000004_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6afaf1254d59e31eb51ff5d153f87b2c.html  dir_6afaf1254d59e31eb51ff5d153f87b2c_dep.dot  dir_7c77a4345f9b8beba648509b89731f36.html  dir_7c77a4345f9b8beba648509b89731f36_dep.dot  dir_a8a0f1c6be084965a9d3e64e627a8248.html  dir_a8a0f1c6be084965a9d3e64e627a8248_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_eabe2c60eeb37c1970fe9779a049cdf8.html  files.html  func__aux_8c.html  func__aux_8c__incl.dot  func__aux_8c__incl.map  func__aux_8c__incl.md5  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.dot  menudata.js  myDLL_8c.html  myDLL_8c__incl.dot  myDLL_8c__incl.map  myDLL_8c__incl.md5  myDLL_8h.html  myDLL_8h__dep__incl.dot  myDLL_8h__dep__incl.map  (+20 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  (+10 more)
include/: myDLL.h
src/: func_aux.c  main.c  myDLL.c
(+5 files in other folders)
